Bug 111119 - DFG CFA should not do liveness pruning
Summary: DFG CFA should not do liveness pruning
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 109389
  Show dependency treegraph
 
Reported: 2013-02-28 15:08 PST by Filip Pizlo
Modified: 2013-02-28 17:34 PST (History)
7 users (show)

See Also:


Attachments
the patch (2.58 KB, patch)
2013-02-28 15:09 PST, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff
the patch (3.42 KB, patch)
2013-02-28 16:21 PST, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2013-02-28 15:08:00 PST
It adds complexity and probably buys nothing.  Moreover, I'm transitioning to having liveness only available at the bitter end of compilation, so this will stop working after https://bugs.webkit.org/show_bug.cgi?id=109389 anyway.
Comment 1 Filip Pizlo 2013-02-28 15:09:47 PST
Created attachment 190818 [details]
the patch
Comment 2 Mark Hahnenberg 2013-02-28 15:15:01 PST
Comment on attachment 190818 [details]
the patch

r=me
Comment 3 Filip Pizlo 2013-02-28 16:21:33 PST
Created attachment 190834 [details]
the patch

Fix a bug.
Comment 4 Mark Hahnenberg 2013-02-28 16:36:13 PST
Comment on attachment 190834 [details]
the patch

r=me
Comment 5 Filip Pizlo 2013-02-28 17:34:09 PST
Landed in http://trac.webkit.org/changeset/144401