DFG CFA should not do liveness pruning https://bugs.webkit.org/show_bug.cgi?id=111119

Reviewed by Mark Hahnenberg.

It adds complexity and probably buys nothing.  Moreover, I'm transitioning to having
liveness only available at the bitter end of compilation, so this will stop working
after https://bugs.webkit.org/show_bug.cgi?id=109389 anyway.

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::initialize):
(JSC::DFG::AbstractState::mergeStateAtTail):



Canonical link: https://commits.webkit.org/129472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144401 268f45cc-cd09-0410-ab3c-d52691b4dbfc